Fix missing background tonality without avatar

--- a/res/css/structures/_BackdropPanel.scss
+++ b/res/css/structures/_BackdropPanel.scss
@@ -29,7 +29,7 @@ limitations under the License.
         top: 0;
         height: 100vh;
         width: 100%;
-        background-color: rgba(255, 255, 255, 0.055);
+        background-color: var(--lp-background-overlay)
     }
 }
 
