--- a/res/themes/light/css/_light.scss
+++ b/res/themes/light/css/_light.scss
@@ -365,6 +365,7 @@ $appearance-tab-border-color: $input-darker-bg-color;
 :root {
     --llp-background-blur: 40px;
     --lp-background-blur: 20px;
+    --lp-background-overlay: rgba(0, 0, 0, 0.055);
 }
 $composer-shadow-color: rgba(0, 0, 0, 0.04);
 
